--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -16,7 +16,7 @@ jobs:
   nancy:
     strategy:
       matrix:
-        go: ["1.22"] # nancy is a little flaky
+        go: ["1.24"] # nancy is a little flaky running more than once
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
