Update to golangci-lint v2
Signed-off-by: Steve Coffman <steve@khanacademy.org>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,17 +5,18 @@ on:
       - master
   pull_request:
     types: [ opened, synchronize ]
-env:
-  GOTOOLCHAIN: local
 # When a new revision is pushed to a PR, cancel all in-progress CI runs for that
 # PR. See https://docs.github.com/en/actions/using-jobs/using-concurrency
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
+env:
+  GOTOOLCHAIN: local
+  GOFLAGS: "-trimpath"
 jobs:
   golangci-lint:
     env:
-      GOLANGCI_LINT_VERSION: v1.64.5
+      GOLANGCI_LINT_VERSION: latest
     strategy:
       matrix:
         go: ["1.23", "1.24"]
@@ -26,11 +27,11 @@ jobs:
         with:
           go-version: ${{ matrix.go }}
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6.5.2
+        uses: golangci/golangci-lint-action@v7.0.0
         with:
           version: ${{ env.GOLANGCI_LINT_VERSION }}
       - name: golangci-lint examples
-        uses: golangci/golangci-lint-action@v6.5.2
+        uses: golangci/golangci-lint-action@v7.0.0
         with:
           version: ${{ env.GOLANGCI_LINT_VERSION }}
           working-directory: _examples
