Add some more action linting help and pin actions
Signed-off-by: Steve Coffman <steve@khanacademy.org>

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,4 @@
+# top-most EditorConfig file
 root = true
 
 [*]
@@ -11,7 +12,15 @@ indent_size = 4
 [*.{go,gotpl}]
 indent_style = tab
 
-[*.yml]
+# Ignore yaml https://learn.microsoft.com/en-us/visualstudio/code-quality/use-roslyn-analyzers?view=vs-2022
+[*.{yaml,yml,yml.j2,yaml.j2}]
+generated_code = true
+# charset = unset
+# end_of_line = unset
+# insert_final_newline = unset
+# trim_trailing_whitespace = unset
+# indent_style = unset
+# indent_size = unset
 indent_size = 2
 
 # These often end up with go code inside, so lets keep tabs
