--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,9 +2,9 @@ name: Lint
 on:
   push:
     branches:
-      - master
+    - master
   pull_request:
-    types: [ opened, synchronize ]
+    types: [opened, synchronize]
 # When a new revision is pushed to a PR, cancel all in-progress CI runs for that
 # PR. See https://docs.github.com/en/actions/using-jobs/using-concurrency
 concurrency:
@@ -22,16 +22,16 @@ jobs:
         go: ["1.24", "1.25"]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
-      - uses: actions/setup-go@v6
-        with:
-          go-version: ${{ matrix.go }}
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v8.0.0
-        with:
-          version: ${{ env.GOLANGCI_LINT_VERSION }}
-      - name: golangci-lint examples
-        uses: golangci/golangci-lint-action@v8.0.0
-        with:
-          version: ${{ env.GOLANGCI_LINT_VERSION }}
-          working-directory: _examples
+    - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+    - uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6
+      with:
+        go-version: ${{ matrix.go }}
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 # v8.0.0
+      with:
+        version: ${{ env.GOLANGCI_LINT_VERSION }}
+    - name: golangci-lint examples
+      uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 # v8.0.0
+      with:
+        version: ${{ env.GOLANGCI_LINT_VERSION }}
+        working-directory: _examples
