--- a/.github/workflows/gomod-clean.yml
+++ b/.github/workflows/gomod-clean.yml
@@ -14,12 +14,18 @@ concurrency:
   cancel-in-progress: true
 jobs:
   gomodclean:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
+      pull-requests: write
     strategy:
       matrix:
         go: ["1.24"]
-    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+      with:
+        persist-credentials: "false"
     - uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6
       with:
         go-version: ${{ matrix.go }}
