--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -14,14 +14,19 @@ concurrency:
   cancel-in-progress: true
 jobs:
   integration:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
+      pull-requests: write
     strategy:
       matrix:
         go: ["1.24", "1.25"]
         node: [22]
-    runs-on: ubuntu-latest
-    timeout-minutes: 3
     steps:
     - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+      with:
+        persist-credentials: "false"
     - uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6
       with:
         go-version: ${{ matrix.go }}
@@ -32,13 +37,19 @@ jobs:
     - run: cd integration ; npm ci
     - run: .github/workflows/check-integration
   federation:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
+      pull-requests: write
     strategy:
       matrix:
         go: ["1.24", "1.25"]
         node: [22]
-    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+      with:
+        persist-credentials: "false"
     - uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6
       with:
         go-version: ${{ matrix.go }}
@@ -49,12 +60,18 @@ jobs:
     - run: cd _examples/federation ; npm install
     - run: .github/workflows/check-federation
   init:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
+      pull-requests: write
     strategy:
       matrix:
         go: ["1.24", "1.25"]
-    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+      with:
+        persist-credentials: "false"
     - uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6
       with:
         go-version: ${{ matrix.go }}
