--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -3,23 +3,25 @@ on:
   workflow_run:
     workflows: ["Test"]
     types:
-      - completed
-
+    - completed
 permissions:
   checks: write
-
 jobs:
   checks:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
-      - name: Download Test Report
-        uses: dawidd6/action-download-artifact@v11
-        with:
-          name: junit-test-results
-          workflow: ${{ github.event.workflow.id }}
-          run_id: ${{ github.event.workflow_run.id }}
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v5
-        with:
-          commit: ${{github.event.workflow_run.head_sha}}
-          report_paths: '**/*.xml'
+    - name: Download Test Report
+      uses: dawidd6/action-download-artifact@ac66b43f0e6a346234dd65d4d0c8fbb31cb316e5 # v11
+      with:
+        name: junit-test-results
+        workflow: ${{ github.event.workflow.id }}
+        run_id: ${{ github.event.workflow_run.id }}
+    - name: Publish Test Report
+      uses: mikepenz/action-junit-report@3585e9575db828022551b4231f165eb59a0e74e3 # v5
+      with:
+        commit: ${{github.event.workflow_run.head_sha}}
+        report_paths: '**/*.xml'
