--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Test
 on:
   push:
     branches:
-      - master
+    - master
   pull_request:
-    types: [ opened, synchronize ]
+    types: [opened, synchronize]
 env:
   GOTOOLCHAIN: local
 # When a new revision is pushed to a PR, cancel all in-progress CI runs for that
@@ -21,6 +21,10 @@ permissions:
   checks: write
 jobs:
   test:
+    timeout-minutes: 10
+    permissions:
+      contents: read
+      pull-requests: write
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
@@ -28,76 +32,78 @@ jobs:
     runs-on: ${{ matrix.os }}
     continue-on-error: true
     steps:
-      - uses: actions/checkout@v5
-      - uses: actions/setup-go@v6
-        with:
-          go-version: ${{ matrix.go }}
-      # Install gotestsum on the VM running the action.
-      - name: Setup gotestsum
-        run: go install gotest.tools/gotestsum@latest
-      - name: Core tests
-        shell: bash
-        run: |
-          set -euo pipefail
-          go mod download
-          gotestsum --jsonfile go_test.json --junitfile report.xml --format-icons=hivis --format=pkgname-and-test-fails -- -race ./... -trimpath
-      - name: Example tests
-        shell: bash
-        if: success() || failure() # always run even if the previous step fails
-        run: |
-          cd _examples
-          go mod download
-          gotestsum --junitfile ../go_examples_report.xml --format-icons=hivis --format=pkgname-and-test-fails -- -race ./... -trimpath
-      - name: Upload Test Report
-        uses: actions/upload-artifact@v4.6.2
-        if: always() # always run even if the previous step fails
-        with:
-          name: test-junit-${{ matrix.os }}-${{ matrix.go }}
-          path: '*.xml'
-          retention-days: 1
-      - name: action-junit-report
-        shell: bash
-        if: success() || failure() # always run even if the previous step fails
-        run: |
-          echo "### mikepenz/action-junit-report! :rocket:" >> $GITHUB_STEP_SUMMARY
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v5
-        if: success() || failure() # always run even if the previous step fails
-        with:
-          report_paths: |
-            report.xml
-            go_examples_report.xml
-      - name: robherley/go-test-action announcement
-        shell: bash
-        if: success() || failure() # always run even if the previous step fails
-        run: |
-          echo "### robherley/go-test-action! :rocket:" >> $GITHUB_STEP_SUMMARY
-#      - name: Annotate tests does not work on pull-requests for security
-#        if: success() || failure() # always run even if the previous step fails
-#        uses: guyarb/golang-test-annotations@v0.8.0
-#        with:
-#          test-results: go_test.json
-      - name: Publish go-test-action Report
-        if: success() || failure() # always run even if the previous step fails
-        uses: robherley/go-test-action@v0.6.0
-        with:
-          # Parse an exisiting [test2json](https://pkg.go.dev/cmd/test2json) file, instead of executing go test.
-          # Will always exit(0) on successful test file parse.
-          # Optional. No default
-          fromJSONFile: go_test.json
-          omit: |
-            untested
-            successful
-      - name: test-summary/action announcement
-        shell: bash
-        if: success() || failure() # always run even if the previous step fails
-        run: |
-          echo "### test-summary/action! :rocket:" >> $GITHUB_STEP_SUMMARY
-      - name: Publish Test Summary Report
-        uses: test-summary/action@v2.4
-        if: success() || failure() # always run even if the previous step fails
-        with:
-          show: "fail, skip"
-          paths: |
-            report.xml
-            go_examples_report.xml
+    - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+      with:
+        persist-credentials: "false"
+    - uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6
+      with:
+        go-version: ${{ matrix.go }}
+    # Install gotestsum on the VM running the action.
+    - name: Setup gotestsum
+      run: go install gotest.tools/gotestsum@latest
+    - name: Core tests
+      shell: bash
+      run: |
+        set -euo pipefail
+        go mod download
+        gotestsum --jsonfile go_test.json --junitfile report.xml --format-icons=hivis --format=pkgname-and-test-fails -- -race ./... -trimpath
+    - name: Example tests
+      shell: bash
+      if: success() || failure() # always run even if the previous step fails
+      run: |
+        cd _examples
+        go mod download
+        gotestsum --junitfile ../go_examples_report.xml --format-icons=hivis --format=pkgname-and-test-fails -- -race ./... -trimpath
+    - name: Upload Test Report
+      uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+      if: always() # always run even if the previous step fails
+      with:
+        name: test-junit-${{ matrix.os }}-${{ matrix.go }}
+        path: '*.xml'
+        retention-days: 1
+    - name: action-junit-report
+      shell: bash
+      if: success() || failure() # always run even if the previous step fails
+      run: |
+        echo "### mikepenz/action-junit-report! :rocket:" >> $GITHUB_STEP_SUMMARY
+    - name: Publish Test Report
+      uses: mikepenz/action-junit-report@3585e9575db828022551b4231f165eb59a0e74e3 # v5
+      if: success() || failure() # always run even if the previous step fails
+      with:
+        report_paths: |
+          report.xml
+          go_examples_report.xml
+    - name: robherley/go-test-action announcement
+      shell: bash
+      if: success() || failure() # always run even if the previous step fails
+      run: |
+        echo "### robherley/go-test-action! :rocket:" >> $GITHUB_STEP_SUMMARY
+      #      - name: Annotate tests does not work on pull-requests for security
+      #        if: success() || failure() # always run even if the previous step fails
+      #        uses: guyarb/golang-test-annotations@v0.8.0
+      #        with:
+      #          test-results: go_test.json
+    - name: Publish go-test-action Report
+      if: success() || failure() # always run even if the previous step fails
+      uses: robherley/go-test-action@b19f6aadabfb1ad85079065b21aa2af132466468 # v0.6.0
+      with:
+        # Parse an exisiting [test2json](https://pkg.go.dev/cmd/test2json) file, instead of executing go test.
+        # Will always exit(0) on successful test file parse.
+        # Optional. No default
+        fromJSONFile: go_test.json
+        omit: |
+          untested
+          successful
+    - name: test-summary/action announcement
+      shell: bash
+      if: success() || failure() # always run even if the previous step fails
+      run: |
+        echo "### test-summary/action! :rocket:" >> $GITHUB_STEP_SUMMARY
+    - name: Publish Test Summary Report
+      uses: test-summary/action@31493c76ec9e7aa675f1585d3ed6f1da69269a86 # v2.4
+      if: success() || failure() # always run even if the previous step fails
+      with:
+        show: "fail, skip"
+        paths: |
+          report.xml
+          go_examples_report.xml
