--- a/.golangci.yml
+++ b/.golangci.yml
@@ -147,3 +147,6 @@ formatters:
       - third_party$
       - builtin$
       - examples$
+issues:
+  max-issues-per-linter: 0
+  max-same-issues: 0
