Add goccy/go-yaml to _examples/tools.go to fix circular dependency
The code generator (run via go run ../../testdata/gqlgen.go) depends
on goccy/go-yaml transitively through codegen/config. Adding it to
tools.go ensures go mod tidy preserves this dependency, following
the same pattern used for dataloaden and golang.org/x/text.

Also updated:
- _examples/enum/gqlgen.yaml: Quote TRUE/FALSE keys (goccy YAML spec compliance)
- codegen/config/config_test.go: Update error message expectations (goccy uses \n on all platforms)

Fixes circular dependency where go mod tidy would remove goccy from
_examples/go.sum, causing subsequent code generation to fail.

--- a/_examples/enum/gqlgen.yaml
+++ b/_examples/enum/gqlgen.yaml
@@ -19,21 +19,21 @@ models:
   BoolTyped:
     model: github.com/99designs/gqlgen/_examples/enum/model.BoolTyped
     enum_values:
-      TRUE:
+      "TRUE":
         value: github.com/99designs/gqlgen/_examples/enum/model.BoolTypedTrue
-      FALSE:
+      "FALSE":
         value: github.com/99designs/gqlgen/_examples/enum/model.BoolTypedFalse
   BoolUntyped:
     model: github.com/99designs/gqlgen/graphql.Boolean
     enum_values:
-      TRUE:
+      "TRUE":
         value: github.com/99designs/gqlgen/_examples/enum/model.BoolUntypedTrue
-      FALSE:
+      "FALSE":
         value: github.com/99designs/gqlgen/_examples/enum/model.BoolUntypedFalse
   InPackage:
     model: github.com/99designs/gqlgen/_examples/enum/api.InPackage
     enum_values:
-      TRUE:
+      "TRUE":
         value: github.com/99designs/gqlgen/_examples/enum/api.InPackageTrue
-      FALSE:
+      "FALSE":
         value: github.com/99designs/gqlgen/_examples/enum/api.InPackageFalse
