fix(batch): pass field args in batch resolvers

--- a/_examples/batchresolver/gqlgen.yml
+++ b/_examples/batchresolver/gqlgen.yml
@@ -22,6 +22,11 @@ models:
         batch: true
       nullableNonBatch:
         resolver: true
+      nullableBatchWithArg:
+        resolver: true
+        batch: true
+      nullableNonBatchWithArg:
+        resolver: true
       nonNullableBatch:
         resolver: true
         batch: true
