--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,7 +24,7 @@ jobs:
       GOLANGCI_LINT_VERSION: latest
     strategy:
       matrix:
-        go: ["1.24", "1.25"]
+        go: ["1.26", "1.25"]
     steps:
     - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v5
       with:
@@ -36,6 +36,7 @@ jobs:
       uses: golangci/golangci-lint-action@1e7e51e771db61008b38414a730f564565cf7c20 # v9.2.0
       with:
         version: ${{ env.GOLANGCI_LINT_VERSION }}
+        verify: false
     - name: golangci-lint examples
       uses: golangci/golangci-lint-action@1e7e51e771db61008b38414a730f564565cf7c20 # v9.2.0
       with:
